Thu Dec 16 07:22:51 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.h: New file.  This is an API to share datum among VMs.

	* intervm.c: Its implementation.

	* inits.c (rb_call_inits): call inits for intervm.c

	* string.c: Strings needs some care about sharing among VMs:
	  Inter-VM strings do not have their own GC so reference counts
	  should be manipulated properly.

	* gc.c (gc_mark_children): Now it is possible for an Object to
	  have references toward other VM's object spaces; should not mark
	  them on those cases.

Thu Dec 16 07:15:33 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* marshal.c (final_free_marshal_compat): should return.

	* class.c: gc.h needed for rb_free_m_table.

	* ruby.c (ruby_vm_process_options): what's this casting business?

	* vm_core.h: declaration needed.

Mon Dec 13 14:28:52 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* mvm.c (vm_join): join should wait for at least once.

Sat Dec 11 05:28:52 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* util.c (ACQUIRE_DTOA_LOCK): No free lunch any more; a gentle
	  locking is needed.

	* inits.c (rb_call_inits): ditto.

Sat Dec 11 05:20:11 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* util.c (scan_digits): Constify.  What is important here is the
	  data can be accessed simultaneously from multiple VMs.

Sat Dec 11 05:00:32 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* regparse.c (FreeNodeList): is a global static variable and shall
	  be divided into VMs.

	* inits.c (rb_call_inits): ditto.

Sat Dec 11 03:21:50 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* mvm.c (vm_join): Original condition never reached, because a
	  vm->living_threads will not be freed until the VM is GCed;
	  someone else is joining a VM means it still has the hash.

	* thread.c (thread_start_func_2): Main thread's graceful
	  shutdown neds to finish other threads of the same VM.

	* thread.c (rb_vm_terminate_all_really_everything): This is